Added metadata information for various elements across multiple .html files.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -258,7 +258,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <!-- scroll icon -->
-            <img src="./img/picture_scroll_icon.png" alt="">
+            <img src="./img/picture_scroll_icon.png" alt="Demon Parade Picture Scroll icon">
 
             <!-- ==========
             Demon Parade Picture Scroll Mechanics 
@@ -270,7 +270,7 @@
                 character. Upon acquiring a Picture Scroll, the player unlocks the Picture Scroll slot in their character inventory. 
                 It is placed below the Accessories slots. 
             </p>
-            <img src="./img/picture_scroll_mid.png" alt="">
+            <img src="./img/picture_scroll_mid.png" alt="Full Picture Scroll Accessory">
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
                 Dream of the Samurai (New Game) in order to have the chance at obtaining Picture Scrolls. Upon defeating enemies 
@@ -783,7 +783,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Constitution</span>
-                        <img src="./img/constitution_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/constitution_icon.png" alt="Constitution icon">
                     </td>
                     <td>
                         Allows your health to rapidly replenish itself by 4.5% per second when you are at 70% health or higher.
@@ -792,7 +792,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Heart</span>
-                        <img src="./img/heart_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/heart_icon.png" alt="Heart icon">
                     </td>
                     <td>
                         Increases the amount of Ki recovered when performing a Ki Pulse by 60%.
@@ -801,7 +801,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Courage</span>
-                        <img src="./img/courage_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/courage_icon.png" alt="Courage icon">
                     </td>
                     <td>
                         Reduces Ki consumption when attacking by 20%, and greatly weakens the effects of status ailments that slow down 
@@ -811,7 +811,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Stamina</span>
-                        <img src="./img/stamina_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/stamina_icon.png" alt="Stamina icon">
                     </td>
                     <td>
                         Unlocks Rank AA for Agility and Toughness. 13% Melee Ki reduction, 15% Dodge Ki reduction, 7% Ki Recovery
@@ -825,7 +825,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Strength</span>
-                        <img src="./img/strength_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/strength_icon.png" alt="Strength icon">
                     </td>
                     <td>
                         Increases the Active Skill Ki damage you inflict, while also allowing you to recover your Ki with a Ki Pulse by
@@ -836,7 +836,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Skill</span>
-                        <img src="./img/skill_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/skill_icon.png" alt="Skill icon">
                     </td>
                     <td>
                         Ki Pulse: Heaven / Man / Earth will be triggered even when you don't succeed in recovering full Ki via
@@ -847,7 +847,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Dexterity</span>
-                        <img src="./img/dexterity_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/dexterity_icon.png" alt="Dexterity icon">
                     </td>
                     <td>
                         Allows you to have two Ninjutsu Mystic Arts active. This has no effect if you do not have any Mystic Arts
@@ -857,7 +857,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Magic</span>
-                        <img src="./img/magic_icon.png" alt="" class="mx-auto mt-3">
+                        <img class="mx-auto mt-3" src="./img/magic_icon.png" alt="Magic icon">
                     </td>
                     <td>
                         Allows you to have two Onmyo Magic Mystic Arts active. This has no effect if you do not have any Mystic
